<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="network_error">
        Failed to load data
    </string>
    <string name="app_name">RickAndMorty</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>


    <string name="avatar">Avatar</string>
    <string name="characters_welcome_message"> Get to know rick and morty characters!</string>
    <string name="episodes_welcome_message"> Discover Rick and Morty world!</string>

    <string name="information">Information</string>
    <string name="gender">Gender : %1s</string>
    <string name="origin">Origin: %1s</string>
    <string name="type">Type: %1s</string>
    <string name="type_empty">Type </string>
    <string name="dimension">Dimension: %1s</string>
    <string name="dimension_empty">Dimension</string>

    <string name="status">Status %1s</string>
    <string name="status_empty">Status</string>
    <string name="gender_empty">Gender</string>
    <string name="search">Search</string>
    <string name="try_again">Try again</string>

    <string name="network_empty_result_error">Empty result received.</string>
    <string name="network_error_with_code">Encountered %1s error trying to retrieve the data.</string>
    <string name="unknown_network_exception">Unknown error occurred during remote data retrieval.</string>
    <string name="database_error">Error occurred during database call.</string>
    <string name="location">Location: %1s</string>


    <string name="internal_error">Server error</string>


    <string name="species">Species: %1s</string>
    <string name="species_empty">Species</string>
    <string name="name">Name: %1s</string>
    <string name="created">Created: %1s</string>

    <string name="name_empty">Name</string>
    <string name="results_amount">Results: %1s</string>
    <string name="no_filter_results">No matching results.</string>
    <string name="clear_filter">Clear filter</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="unknown_resource_error">Call to unknown resource</string>
    <string name="unknown_network_error">Unknown network error</string>
    <string name="not_connected_ui_message">You are not connected to internet</string>
    <string name="human">Human</string>

    <string name="unknown_data_access_error">Unknown data access error occurred.</string>
    <string name="episode">Episode: \n %1s</string>
    <string name="episode_empty">Episode </string>
    <string name="air_date">Air date: \n %1s</string>

    <string name="no_result_exception">No data found in local storage</string>

    <string name="no_data_available_error">No data available</string>
    <string name="local_data_warning">No internet connection was available. Local data is loaded. </string>

    <string name="apply">Apply</string>
    <string name="clear">Clear</string>

    <string name="no_filters_applied">No filters applied</string>
    <string name="empty_filters_message">No filters were applied anyway</string>


    <string name="empty_database_result">Empty database result</string>
    <string name="unable_to_parse_error">Unable to parse data.</string>
    <string name="data_access_error">Unable to retrieve the data</string>
    <string name="connection_error">Error occurred while connecting</string>
    <string name="no_internet_connection_error">You are not connected to the internet</string>
    <string name="alert_dialog_button_ok">OK</string>
    <string name="alert_dialog_general_error">Error occurred</string>

    <string name="no_internet_data_might_be_outdated">No internet. Some data might be missing or out of date.</string>
    <string name="error">Error</string>
</resources>
