<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_rm_main"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_6"
        android:text="@string/status"
        android:textColor="@color/blue_rm" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_status_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        app:singleSelection="true" />

    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/gender_empty"
        android:textColor="@color/blue_rm" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        app:singleSelection="true" />

    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/name"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterEditTextStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/mask_for_relaxation_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/blue_rm"
            android:background="@color/blue_rm_secondary"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/species"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterEditTextStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/brand_second_life_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/blue_rm"
            android:background="@color/blue_rm_secondary"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/type_empty"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterEditTextStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/type_pattern_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/blue_rm"
            android:background="@color/blue_rm_secondary"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
