<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue_rm_main"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/character_details_fragment_scene2">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_2"
        >

        <!--

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminate="true"
            android:alpha="0.1"
            app:trackThickness="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:indicatorColor="@color/brown_rm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            -->

        <!--



             -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:elevation="1dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeWidth="@dimen/margin_1" />


                <TextView
                    android:id="@+id/tv_status"
                    style="@style/TextViewDetailsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/padding_1"
                    tools:text="Alive" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextViewDetailsStyle"
                    android:paddingVertical="@dimen/margin_2"
                    android:paddingHorizontal="@dimen/margin_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/name_empty"
                    android:textSize="@dimen/text_size_5" />

                <TextView
                    android:id="@+id/tv_species"
                    style="@style/TextViewDetailsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_2"
                    android:gravity="center"
                    android:padding="@dimen/padding_1"
                    tools:text="@string/human" />


                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/TextViewDetailsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    tools:text="@string/gender" />

                <TextView
                    android:id="@+id/tv_origin"
                    style="@style/TextViewDetailsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/margin_2"
                    tools:text="@string/origin" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextViewDetailsStyle"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    tools:text="@string/location" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/TextViewDetailsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/margin_2"
                    android:text="@string/type" />
            </LinearLayout>
        </ScrollView>


        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="72dp"
            android:indeterminateTint="@color/blue_rm"
            android:layout_height="72dp"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        android:background="@color/blue_rm_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        tools:listitem="@layout/character_item" />


</androidx.constraintlayout.motion.widget.MotionLayout>
