<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/name"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/mask_for_relaxation_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/FilterInputEditTextLayout"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/type_empty"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/type_pattern_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/FilterInputEditTextLayout"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        style="@style/TextViewSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:text="@string/dimension_empty"
        android:textColor="@color/blue_rm" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/FilterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        app:startIconTint="@color/blue_rm"
        app:startIconDrawable="@drawable/brand_second_life_svgrepo_com"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/FilterInputEditTextLayout"
            android:padding="@dimen/padding_1"
            android:id="@+id/et_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>


    <include
        android:id="@+id/filter_buttons"
        layout="@layout/filter_buttons_layout"/>


</androidx.appcompat.widget.LinearLayoutCompat>
