<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipe_refresh"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_rm_main"
        android:orientation="vertical"
        app:layoutDescription="@xml/location_details_fragment_xml_constraintlayout_scene">


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextViewDetailsStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_item_height"
                android:layout_marginVertical="@dimen/margin_2"
                android:background="@color/material_dynamic_primary100"
                android:visibility="gone"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_type"
                style="@style/TextViewDetailsStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_item_height"
                android:layout_marginBottom="@dimen/margin_2"
                android:background="@color/material_dynamic_primary100"
                android:visibility="gone"
                tools:text="@string/type" />


            <TextView
                android:id="@+id/tv_dimension"
                style="@style/TextViewDetailsStyle"
                android:layout_width="match_parent"

                android:layout_height="@dimen/details_item_height"
                android:layout_marginBottom="@dimen/margin_2"
                android:background="@color/material_dynamic_primary100"
                android:visibility="gone"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_created"
                style="@style/TextViewDetailsStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_item_height"
                android:layout_marginBottom="@dimen/margin_2"
                android:background="@color/material_dynamic_primary100"
                android:visibility="gone"
                tools:text="@string/type" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_layout">


            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_2"
                android:paddingVertical="@dimen/padding_4"
                android:text="@string/characters"
                android:textColor="@color/blue_rm" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/character_item" />
        </LinearLayout>


    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
